@@ -117,6 +117,9 @@ is called, it will be permitted to complete, and then the connection will be ter
 &quot;I/O&quot;
 - Rx Only. I/O samples received from a remote module. Only if AO=0.
 <P>
+&quot;Sensor&quot;
+- Rx Only. Used for receiving sensor samples. Only if AO=0.
+<P>
 &quot;Identify&quot;
 - Rx on the Coordinator Only. Identifies new nodes as they join the network. Only if AO=0.
 
@@ -243,6 +246,6 @@ Attie Grande &lt;<A HREF="mailto:attie@attie.co.uk">attie@attie.co.uk</A>&gt;
 This document was created by
 <A HREF="/cgi-bin/man/man2html">man2html</A>,
 using the manual pages.<BR>
-Time: 21:47:15 GMT, June 07, 2012
+Time: 23:02:52 GMT, February 06, 2013
 </BODY>
 </HTML>
