@@ -104,6 +104,9 @@ is called, it will be permitted to complete, and then the connection will be ter
 "I/O"
 - Rx Only. I/O samples received from a remote module. Only if AO=0.
 .sp 0
+"Sensor"
+- Rx Only. Used for receiving sensor samples. Only if AO=0.
+.sp 0
 "Identify"
 - Rx on the Coordinator Only. Identifies new nodes as they join the network. Only if AO=0.
 .fi
