@@ -4,6 +4,7 @@ v3.0.9 - in progress
 	* Fixed broken ifdef around timespec definition
 	* Improved performance when locating a Frame ID
 	* Fixed a corner-case where timeouts occur prematurely if the packet transmission is delayed
+	* Added 'Sensor' connection type for XBee Series 2 modules
 
 v3.0.8 - 24 Dec 2012
 	* Fixed analog input values
